fix: CSS紐づけ、不要ファイル削除

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
-    <head>YO</head>
-    <body>
-        <p>テスト</p>
-    </body>
+  <head>
+    <title>YO</title>
+    <link rel="stylesheet" href="main.css">
+  </head>
+  <body>
+    <p>テスト</p>
+  </body>
 </html>
