--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
-    <title>YO</title>
+    <title>これだけ覚えればOK ～HTML，CSS～</title>
     <link rel="stylesheet" href="main.css">
   </head>
 
@@ -12,11 +12,12 @@
 
     <p>これは第一段落の文です。この文には
       <span>span 要素</span>
-      <a href="http://example.com">リンク</a>が含まれます。
+      <a href="./html">リンク</a>が含まれます。
     </p>
 
     <p>これは第二段落の文です。この文には
-      <em>em 要素</em>が含まれます。
+      <span>span 要素</span>
+      <a href="./css">リンク</a>が含まれます。
     </p>
 
     <ul>
